--- a/src/main/resources/templates/search_fragment.html
+++ b/src/main/resources/templates/search_fragment.html
@@ -12,10 +12,13 @@
                 <option th:value="item_name">Product name</option>
                 <option th:value="brand_name">Brand</option>
             </select>
-            <input class="form-control mr-sm-2" name="keyword"  th:attr="name='keyword'"id="keyword" type="search" placeholder="Search"
+            <input class="form-control mr-m-2" name="keyword"  th:attr="name='keyword'"id="keyword" type="search" placeholder="Search"
                    aria-label="Search">
+            &nbsp&nbsp
             <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">search</button>
         </form>
     </div>
+
+    <br>
 </div>
 </html>
