--- a/src/main/resources/templates/view/detail.html
+++ b/src/main/resources/templates/view/detail.html
@@ -44,8 +44,8 @@
             <h4 th:text="${item.name}"/>
             <p th:text="${item.brand}" id="brandinfo"/> / <p th:text="${item.code}" id="codeinfo"/>
             <hr>
-            <i id="ic-like"><p id="likecount" th:value="${item.liked}"/>
-                <p id="likeinfo"> people like this product. </p></i>
+<!--            <i id="ic-like"><p id="likecount" th:value="${item.liked}"/>-->
+<!--                <p id="likeinfo"> people like this product. </p></i>-->
             <p><h6>Gender</h6>Unisex</p>
             <p><h6>Size</h6>
                 <div class="container">
@@ -70,7 +70,6 @@
                             name="item_id"
                             class="btn btn-light"
                             th:value="${item.id}">Add Cart</button>
-
                 </form>
 
                 <button id="like" class="btn btn-light">
