--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -102,7 +102,8 @@
                 <br><br>
                 <div class="row">
                     <input type="button" th:id="submit_btn" class="btn btn-light" value="Save" style="width:200px">&nbsp&nbsp
-                    <input  type="button" th:id="submit_btn" class="btn btn-light" value="Reset" style="width:200px">
+                    <input  type="button" th:id="submit_btn" class="btn btn-light" value="Reset" style="width:200px"
+                            th:onclick="location.href='/cody'">
                 </div>
                 <br>
 
@@ -126,7 +127,7 @@
         <button type="button" class="btn btn-light" onclick="navEvent('acc-id')">ACC</button>
     </div>
 
-    <div class="container px-5 py-5" style="text-align: center">
+    <div class="container py-5" style="text-align: center">
         <!--                아우터-->
         <div class="likeList" id="outerList" style="display: none">
             <li th:if="${outerList.size()== 0}">Add Outer List</li>
@@ -383,7 +384,7 @@
             responsive: {
                 // 0: {items: 2, nav: false},
                 // 600: {items: 3, nav: false, loop: false},
-                1000: {items: 6, nav: false,}
+                1000: {items: 8, nav: false,}
             }
         });
 
