--- a/src/main/resources/templates/view/daily-recommend.html
+++ b/src/main/resources/templates/view/daily-recommend.html
@@ -31,24 +31,19 @@
             <!--            }-->
             <!--        </style>-->
 
+
+
             <!--현재 날씨-->
             <!--날씨 아이콘-->
-            <div>
-                <div class="row" id="weatherFragDiv">
-                    <div class="col" id="weatherIconDiv">
-                        <img src="#" id="loadWeatherIcon">
-                    </div>
-                    <div class="col" id="weatherInfoDiv">
-                        <br/><br>
-                        <h2 id="pageLogo">Today's Weather</h2>
-                        <div id="loadWeather">
-
-                            <div class="spinner-border text-primary" role="status"></div>
-                        </div>
-                        <span id="full_address">Loading...</span>
-                        <br/>
-                    </div>
+            <div class="row" id="weatherFragDiv" style="text-align: center; display: inline; margin-right: 80px;">
+                <div id="weatherIconDiv" style="display: inline">
+                    <img src="#" id="loadWeatherIcon">
                 </div>
+
+                <div id="loadWeather" style="display: inline">
+                    <div class="spinner-border text-primary" role="status" style="display: inline"></div>
+                </div>
+                <span id="full_address">Loading...</span>
             </div>
 
 
@@ -59,9 +54,8 @@
                     <h2 id="pageLogo">Today's Pick!</h2>
                     <small>How about this?</small>
                     <br/><br/>
-                    <div class="col-md-6 justify-content-center py-5">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"
-                             style="width: 400px;">
+                    <div class="col justify-content-center py-5">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 400px;">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                         class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -70,26 +64,23 @@
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                                         aria-label="Slide 3"></button>
                             </div>
-
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img id="carousel1" th:src="@{'/assets/'+${outer.img_name}}" alt="1번 이미지">
+                                    <img th:src="@{'/assets/'+${outer.img_name}}" class="d-block w-100" alt="1번 이미지">
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="carousel2" th:src="@{'/assets/'+${top.img_name}}" alt="2번 이미지">
+                                    <img th:src="@{'/assets/'+${top.img_name}}" class="d-block w-100" alt="2번 이미지">
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="carousel3" th:src="@{'/assets/'+${bottom.img_name}}" alt="3번 이미지">
+                                    <img th:src="@{'/assets/'+${bottom.img_name}}" class="d-block w-100" alt="3번 이미지">
                                 </div>
                             </div>
-
-                            <button class="carousel-control-prev" type="button"
+                            <button class="carousel-control-prev"  type="button"
                                     onclick="$('#carouselExampleIndicators').carousel('prev')"
                                     data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-
                             <button class="carousel-control-next" type="button"
                                     onclick="$('#carouselExampleIndicators').carousel('next')"
                                     data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
@@ -97,7 +88,6 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-
                     </div>
                 </div>
 
