--- a/src/main/resources/templates/view/index.html
+++ b/src/main/resources/templates/view/index.html
@@ -15,7 +15,7 @@
         <th:block th:insert="weather_fragment :: weather()"/>
     </div>
 
-    <div class="justify-content-center py-5" style="height: 900px;">
+    <div class="justify-content-center " style="height: 700px;">
         <!--    Today's Weather-->
         <th:block th:insert="search_fragment :: search()"/>
 
