--- a/src/main/resources/templates/weather_fragment.html
+++ b/src/main/resources/templates/weather_fragment.html
@@ -18,94 +18,41 @@
 
     <div class="container" style="background-color: #FFFFFF;">
         <div>
-<!--            <h2 id="pageLogo">Today's Weather</h2>-->
+            <!--            <h2 id="pageLogo">Today's Weather</h2>-->
         </div>
 
+        <br><br>
         <div class="container" style="text-align: center;">
+
+            <div class="row" id="weatherFragDiv" style="text-align: center; display: inline; margin-right: 80px;">
+                <div id="weatherIconDiv" style="display: inline">
+                    <img src="#" id="loadWeatherIcon">
+                </div>
+
+                <div id="loadWeather" style="display: inline">
+                    <div class="spinner-border text-primary" role="status" style="display: inline"></div>
+                </div>
+                <span id="full_address">Loading...</span>
+            </div>
 
             <!--현재 날씨-->
             <!--날씨 아이콘-->
-            <div class="row" id="weatherFragDiv">
-                <div class="col" id="weatherIconDiv">
-                    <img src="#" id="loadWeatherIcon">
-                </div>
-                <div class="col" id="weatherInfoDiv">
-                    <br/><br><h2 id="pageLogo">Today's Weather</h2>
-                    <div id="loadWeather">
-
-                        <div class="spinner-border text-primary" role="status"></div>
-                    </div>
-                    <span id="full_address">Loading...</span>
-                    <br/>
-                </div>
-            </div>
-
-
-<!--            &lt;!&ndash;현재 온도&ndash;&gt;-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-4"></div>-->
-<!--                <div class="col-md-4">-->
-<!--&lt;!&ndash;                    <span id="loadWeather">&ndash;&gt;-->
-<!--&lt;!&ndash;                        <div class="spinner-border text-primary" role="status"></div>&ndash;&gt;-->
-<!--&lt;!&ndash;                    </span><br/>&ndash;&gt;-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash;현위치 주소&ndash;&gt;-->
-<!--            <div class="row">-->
-<!--&lt;!&ndash;                <span id="full_address">Loading...</span>&ndash;&gt;-->
-<!--                <br/>-->
-<!--            </div>-->
+            <!--            <div class="row" id="weatherFragDiv" style="text-align: center; display: inline">-->
+            <!--                <div class="col" id="weatherIconDiv">-->
+            <!--                    <img src="#" id="loadWeatherIcon">-->
+            <!--                    <div id="loadWeather">-->
+            <!--                        <div class="spinner-border text-primary" role="status"></div>-->
+            <!--                    </div>-->
+            <!--                    <span id="full_address">Loading...</span>-->
+            <!--                </div>-->
+            <!--&lt;!&ndash;                <div class="col" id="weatherInfoDiv">&ndash;&gt;-->
+            <!--&lt;!&ndash;&lt;!&ndash;                    <br/><br><h2 id="pageLogo">Today's Weather</h2>&ndash;&gt;&ndash;&gt;-->
+            <!--&lt;!&ndash;             &ndash;&gt;-->
+            <!--&lt;!&ndash;                </div>&ndash;&gt;-->
+            <!--            </div>-->
 
         </div>
 
-        <!--            옷 추천-->
-        <!--            <hr style="color: #FFFFFF">-->
-        <!--            <div class="row">-->
-        <!--                <h1></h1>-->
-        <!--                <div class="col-md-2"></div>-->
-        <!--                <div class="col-md-8">-->
-        <!--                    <h2>오늘 이 옷은 어떨까요?</h2>-->
-        <!--                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">-->
-        <!--                        <div class="carousel-indicators">-->
-        <!--                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"-->
-        <!--                                    class="active" aria-current="true" aria-label="Slide 1"></button>-->
-        <!--                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"-->
-        <!--                                    aria-label="Slide 2"></button>-->
-        <!--                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"-->
-        <!--                                    aria-label="Slide 3"></button>-->
-        <!--                        </div>-->
-        <!--                        <div class="carousel-inner">-->
-        <!--                            <div class="carousel-item active">-->
-        <!--                                <img th:src="@{${outer.mainUrl}}" class="d-block w-100" alt="1번 이미지">-->
-        <!--                            </div>-->
-        <!--                            <div class="carousel-item">-->
-        <!--                                <img th:src="@{${top.mainUrl}}" class="d-block w-100" alt="2번 이미지">-->
-        <!--                            </div>-->
-        <!--                            <div class="carousel-item">-->
-        <!--                                <img th:src="@{${bottom.mainUrl}}" class="d-block w-100" alt="3번 이미지">-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                        <button class="carousel-control-prev" style="background-color: #FFFFFF" type="button"-->
-        <!--                                onclick="$('#carouselExampleIndicators').carousel('prev')"-->
-        <!--                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">-->
-        <!--                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-        <!--                            <span class="visually-hidden">Previous</span>-->
-        <!--                        </button>-->
-        <!--                        <button class="carousel-control-next" type="button" style="background-color: #FFFFFF"-->
-        <!--                                onclick="$('#carouselExampleIndicators').carousel('next')"-->
-        <!--                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">-->
-        <!--                            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-        <!--                            <span class="visually-hidden">Next</span>-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                <div class="col-md-2"></div>-->
-        <!--            </div>-->
-        <!--            <hr>-->
-
-
-        <!--시계 스크립트-->
         <script>
             var clockTarget = document.getElementById("clock");
 
