--- a/src/main/resources/templates/cody_fragment.html
+++ b/src/main/resources/templates/cody_fragment.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout" th:with="title='Cody Page'">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<div layout:fragment="content" class="container" style="background-color: #FFFFFF; text-align: center">
-    <br><br><br><br>
-    <h3 class="text-center"><b>My Cody List</b></h3>
-    <hr>
-    <p class="text-center" th:if="${codyList.size()==0}">Add your Cody-Book</p>
-    <br><br><br>
+<div th:fragment="cody(codyList)" class="container">
+
+    <div>
+        <h2 id="pageLogo">Recommend Cody</h2>
+        <small id="pageInfo">Choose your own style.</small>
+        <br/><br/>
+    </div>
 
     <div class="owl-carousel" style="position: relative">
         <div th:each="cody:${codyList}">
@@ -19,27 +19,37 @@
                         <!--                               하의-->
                         <div class="col" style="position: absolute">
                             <img th:class="bottomCody"
-                                 th:src="@{'/assets/'+${cody.getBottomId()}+'.png'}" style="position: absolute; top: 20px; left: 160px;" th:style="'width:'+${cody.getBottomSize()}+'%'">
+                                 th:src="@{'/assets/'+${cody.getBottomId()}+'.png'}"
+                                 style="position: absolute; top: 20px; left: 160px;"
+                                 th:style="'width:'+${cody.getBottomSize()}+'%'">
                         </div>
                         <!--                                상의-->
                         <div class="col" style="position: absolute">
                             <img th:class="topCody"
-                                 th:src="@{'/assets/'+${cody.getTopId()}+'.png'}" style="position: absolute; top: 20px; left: 35px;" th:style="'width:'+${cody.getTopSize()}+'%'">
+                                 th:src="@{'/assets/'+${cody.getTopId()}+'.png'}"
+                                 style="position: absolute; top: 20px; left: 35px;"
+                                 th:style="'width:'+${cody.getTopSize()}+'%'">
                         </div>
                         <!--                                아우터-->
                         <div class="col" style="position: absolute">
                             <img th:if="${cody.getOuterId()!=0}" th:class="outerCody"
-                                 th:src="@{'/assets/'+${cody.getOuterId()}+'.png'}" style="position: absolute; top: 120px; left: 95px; width: 50%;" th:style="'width:'+${cody.getOuterSize()}+'%'">
+                                 th:src="@{'/assets/'+${cody.getOuterId()}+'.png'}"
+                                 style="position: absolute; top: 120px; left: 95px; width: 50%;"
+                                 th:style="'width:'+${cody.getOuterSize()}+'%'">
                         </div>
                         <!--                                ACC-->
                         <div class="col" style="position: absolute">
-                            <img  th:if="${cody.getAccId()!=0}" th:class="accCody"
-                                 th:src="@{'/assets/'+${cody.getAccId()}+'.png'}" style="position: absolute; top: 210px; left: 10px; width: 30%;" th:style="'width:'+${cody.getAccSize()}+'%'">
+                            <img th:if="${cody.getAccId()!=0}" th:class="accCody"
+                                 th:src="@{'/assets/'+${cody.getAccId()}+'.png'}"
+                                 style="position: absolute; top: 210px; left: 10px; width: 30%;"
+                                 th:style="'width:'+${cody.getAccSize()}+'%'">
                         </div>
                         <!--                                신발-->
                         <div class="col" style="position: absolute">
                             <img th:class="shoesCody"
-                                 th:src="@{'/assets/'+${cody.getShoesId()}+'.png'}" style="position: absolute; top: 245px; left: 215px; width: 30%;" th:style="'width:'+${cody.getShoesSize()}+'%'">
+                                 th:src="@{'/assets/'+${cody.getShoesId()}+'.png'}"
+                                 style="position: absolute; top: 245px; left: 215px; width: 30%;"
+                                 th:style="'width:'+${cody.getShoesSize()}+'%'">
                         </div>
                     </div>
                 </div>
@@ -48,8 +58,6 @@
     </div>
 
     <br><br><br>
-    <hr>
-
 
     <script type="text/javascript">
 
