--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" th:href="@{/css/common/common.css}">
     <!-- JQeury -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
     <!--    carousel-->
@@ -54,7 +55,7 @@
 
 <!-- contents -->
 <!-- content fragment를 이곳에 배치할 수 있도록 block 생성 -->
-<th:block layout:fragment="content" class="bg-light"></th:block>
+<th:block layout:fragment="content"></th:block>
 
 <!-- footer -->
 <th:block th:replace="common_fragments::footer"></th:block>
