--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -4,7 +4,6 @@
       layout:decorate="layout" th:with="title='Cody Page'">
 
 
-
 <div layout:fragment="content" class="container" style="background-color: #FFFFFF;">
 
     <div>
@@ -66,7 +65,7 @@
 
 
             <div id="cody_info">
-                <div style="text-align: left"><span><b>#BACKGROUND COLOR</b></span></div>
+                <div style="text-align: left"><p id="codyColorLabel">#Background Color</p><br/></div>
                 <div class="row">
                     <!--                    남색-->
                     <div class="color_square" style="background-color:#37505B" onclick="changeColor('#37505B');"></div>
@@ -83,14 +82,14 @@
                 </div>
 
                 <br/>
-                <div style="text-align: left"><span><b>#RESIZE</b></span></div>
+                <div style="text-align: left"><p id="codySliderLabel">#Resize</div>
                 <div class="row">
                     <!--        슬라이더-->
                     <div class="slidecontainer">
                         <input type="range" min="1" max="65" value="60" class="slider" id="outerRange"
                                style="display: none" onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="85" value="50" class="slider" id="topRange"
-                               style="display: none" onchange="changeSize(this.id, this.value)">
+                               onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="75" value="50" class="slider" id="bottomRange"
                                style="display: none" onchange="changeSize(this.id, this.value)">
                         <input type="range" min="1" max="45" value="30" class="slider" id="shoesRange"
@@ -100,23 +99,31 @@
 
                     </div>
                 </div>
+                <br><br>
+                <div class="row">
+                    <input type="button" th:id="submit_btn" class="btn btn-light" value="Save" style="width:200px">&nbsp&nbsp
+                    <input  type="button" th:id="submit_btn" class="btn btn-light" value="Reset" style="width:200px">
+                </div>
+                <br>
 
                 <div class="row">
-                    <input type="button" th:id="submit_btn" class="btn btn-light" value="Save">&nbsp&nbsp
                     <input type="button" th:id="myCody_btn" class="btn btn-light" value="My Cody List"
-                           th:onclick="location.href='/codyList'">
+                           th:onclick="location.href='/codyList'" style="width:200px">&nbsp&nbsp
+                    <input type="button" th:id="myCody_btn" class="btn btn-light" value="Other Cody List"
+                           th:onclick="location.href='/allCodyList'" style="width:200px">
                 </div>
+
             </div>
 
         </div>
     </form>
 
     <div class="container">
-        <button type="button" class="btn btn-light" onclick="navEvent('top-id')">TOP</button>
-        <button type="button" class="btn btn-light" onclick="navEvent('outer-id')">OUTER</button>
-        <button type="button" class="btn btn-light" onclick="navEvent('bottom-id')">BOTTOM</button>
-        <button type="button" class="btn btn-light" onclick="navEvent('shoes-id')">SHOES</button>
-        <button type="button" class="btn btn-light" onclick="navEvent('acc-id')">ACC</button>
+        <button type="button" class="btn btn-light" style="margin-right: 10px;" onclick="navEvent('top-id')">TOP</button>
+        <button type="button" class="btn btn-light" style="margin-right: 10px;" onclick="navEvent('outer-id')">OUTER</button>
+        <button type="button" class="btn btn-light" style="margin-right: 10px;" onclick="navEvent('bottom-id')">BOTTOM</button>
+        <button type="button" class="btn btn-light" style="margin-right: 10px;" onclick="navEvent('shoes-id')">SHOES</button>
+        <button type="button" class="btn btn-light" style="margin-right: 10px;" onclick="navEvent('acc-id')">ACC</button>
     </div>
 
     <div class="container px-5 py-5" style="text-align: center">
@@ -132,7 +139,7 @@
         </div>
 
         <!--                상의-->
-        <div class="likeList" id="topList" style="display: none">
+        <div class="likeList" id="topList">
             <li th:if="${topList.size()== 0}">Add Top List</li>
             <div class="owl-carousel" style="text-align: center">
                 <div class="col" th:each="item:${topList}">
@@ -379,39 +386,6 @@
                 1000: {items: 6, nav: false,}
             }
         });
-
-
-        //navBar 이벤트
-        function navEvent(divId) {
-
-            switch (divId) {
-                case "outer-id":
-                    $(".likeList").hide();
-                    $("#outerList").show();
-                    break;
-
-                case "top-id":
-                    $(".likeList").hide();
-                    $("#topList").show();
-                    break;
-
-                case "bottom-id":
-                    $(".likeList").hide();
-                    $("#bottomList").show();
-
-                    break;
-
-                case "shoes-id":
-                    $(".likeList").hide();
-                    $("#shoesList").show();
-                    break;
-
-                case "acc-id":
-                    $(".likeList").hide();
-                    $("#accList").show();
-                    break;
-            }
-        }
 
     </script>
 </div>
