--- a/src/main/resources/templates/view/detail.html
+++ b/src/main/resources/templates/view/detail.html
@@ -44,10 +44,22 @@
             <h4 th:text="${item.name}"/>
             <p th:text="${item.brand}" id="brandinfo"/> / <p th:text="${item.code}" id="codeinfo"/>
             <hr>
-            <i id="ic-like"><p id="likecount" th:text="${item.liked}"/>
+            <i id="ic-like"><p id="likecount" th:value="${item.liked}"/>
                 <p id="likeinfo"> people like this product. </p></i>
             <p><h6>Gender</h6>Unisex</p>
-            <p><h6>Size</h6>사이즈 드롭다운 배치</p>
+            <p><h6>Size</h6>
+                <div class="container">
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type = "button" data-toggle="dropdown"
+                                id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Size</button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li th:each="size:${item.sizes}">
+                            <a class="dropdown-item" th:href="@{#}" th:text="${size}" th:onclick="getSize([[${size}]])"></a>
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+            </p>
             <p><h6>Price</h6>₩ <span th:text="${#numbers.formatInteger(item.price, 3, 'COMMA')}"></span></p>
 
             <hr>
@@ -58,9 +70,7 @@
                             type="submit"
                             name="item_id"
                             class="btn btn-light"
-                            th:value="${item.id}">
-                        Add Cart
-                    </button>
+                            th:value="${item.id}">Add Cart</button>
 
                 </form>
 
@@ -172,14 +182,32 @@
                         $('#modal').modal('show');
                         if (result.status) {
                             $("like_status").attr('class', 'fas fa-heart');
+                            $("likecount").attr('value',$("likecount").getAttribute("value")+1);
                         } else {
                             $("like_status").attr('class', 'far fa-heart');
                         }
                     }
-
                 });
             });
         });
+
+        // $(document).ready(function () { // document loading 후 실행할 함수
+        //
+        //
+        //    var sizeButton = document.getElementById("#dropdownMenuButton1");
+        //    var sizes = document.querySelectorAll(".dropdown-item");
+        //    for(var i=0; i<sizes.length; i++){
+        //         sizes[i].addEventListener("click", getSize);
+        //    }
+        //
+        //    function getSize(){
+        //        var size = this.getAttribute("text");
+        //        console.log("사이즈--------->",size);
+        //        // sizeButton.innerHTML = size;
+        //        sizeButton.setAttribute("text", size);
+        //    }
+        //
+        // });
 
         $(document).ready(function () { // document loading 후 실행할 함수
 
@@ -237,6 +265,15 @@
             console.log(document.getElementById("modal-review-id").value);
 
             $("#writeReview").modal();
+        };
+
+        var sizeButton = document.getElementById("#dropdownMenuButton1");
+
+        function getSize(size){
+            // var size = this.getAttribute("text");
+            console.log("사이즈--------->",size);
+            // sizeButton.innerHTML = size;
+            sizeButton.setAttribute("text", size);
         };
 
     </script>
